--- a/GreenBowlFoodsSystem/appsettings.json
+++ b/GreenBowlFoodsSystem/appsettings.json
@@ -7,6 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=GreenBowlFoodsDB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=.;Initial Catalog=GreenBowlFoodsDB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True;"
   }
 }
+
+//Server=db40175.databaseasp.net; Database=db40175; User Id=db40175; PasswordHash=N?i8k6_K3%Sn; Encrypt=False; MultipleActiveResultSets=True;
+//Data Source=.;Initial Catalog=GreenBowlFoodsDB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True
+//Server=db40175.public.databaseasp.net; Database=db40175; User Id=db40175; PasswordHash=N?i8k6_K3%Sn; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;
