--- a/GreenBowlFoodsSystem/appsettings.json
+++ b/GreenBowlFoodsSystem/appsettings.json
@@ -7,10 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=GreenBowlFoodsDB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True;"
+    "DefaultConnection": "Server=db40175.public.databaseasp.net; Database=db40175; User Id=db40175; Password=N?i8k6_K3%Sn; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
   }
 }
 
-//Server=db40175.databaseasp.net; Database=db40175; User Id=db40175; PasswordHash=N?i8k6_K3%Sn; Encrypt=False; MultipleActiveResultSets=True;
-//Data Source=.;Initial Catalog=GreenBowlFoodsDB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True
-//Server=db40175.public.databaseasp.net; Database=db40175; User Id=db40175; PasswordHash=N?i8k6_K3%Sn; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;
+//"DefaultConnection": "Server=db40175.databaseasp.net; Database=db40175; User Id=db40175; PasswordHash=N?i8k6_K3%Sn; Encrypt=False; MultipleActiveResultSets=True;"
+//"DefaultConnection": "Data Source=.;Initial Catalog=GreenBowlFoodsDB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True;"
