--- a/GreenBowlFoodsSystem/appsettings.json
+++ b/GreenBowlFoodsSystem/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=db40175.databaseasp.net; Database=db40175; User Id=db40175; Password=N?i8k6_K3%Sn; Encrypt=False; MultipleActiveResultSets=True;"
-    "DefaultConnection": "Data Source=.;Initial Catalog=GreenBowlFoodsDB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True;"
+    "DefaultConnection": "Server=db40175.databaseasp.net; Database=db40175; User Id=db40175; Password=N?i8k6_K3%Sn; Encrypt=False; MultipleActiveResultSets=True;"
+    //"DefaultConnection": "Data Source=.;Initial Catalog=GreenBowlFoodsDB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True;"
   }
 }
 
