--- a/GreenBowlFoodsSystem/appsettings.json
+++ b/GreenBowlFoodsSystem/appsettings.json
@@ -7,9 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Data Source=.;Initial Catalog=GreenBowlFoodsDB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True
-    "DefaultConnection": "Server=db40956.databaseasp.net; Database=db40956; User Id=db40956; Password=4Yr@g#F2?3qL; Encrypt=False; MultipleActiveResultSets=True;"}
+    //"DefaultConnection": "Data Source=.;Initial Catalog=GreenBowlFoodsDB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True;"
+    "DefaultConnection": "Server=db40956.databaseasp.net; Database=db40956; User Id=db40956; Password=4Yr@g#F2?3qL; Encrypt=False; MultipleActiveResultSets=True; "
   }
-
-//"DefaultConnection": "Server=db40956.databaseasp.net; Database=db40956; User Id=db40956; Password=4Yr@g#F2?3qL; Encrypt=False; MultipleActiveResultSets=True; "
-//"DefaultConnection": "Data Source=.;Initial Catalog=GreenBowlFoodsDB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True;"
+}
